--- a/app/src/main/res/layout/activity_update_user.xml
+++ b/app/src/main/res/layout/activity_update_user.xml
@@ -2,18 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout10"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/linearLayout"
+    android:layout_margin="5dp"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".UpdateUserActivity">
+    tools:context=".AddUserActivity">
+
+    <ImageView
+        android:id="@+id/userUpdateProfileImage"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:layout_margin="5dp"
+        app:srcCompat="@drawable/account_box" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="To select profile image, click on the picture. " />
 
     <EditText
         android:id="@+id/editTextUpdateName"
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:ems="10"
         android:hint="Enter name"
         android:inputType="text"
@@ -23,7 +39,7 @@
         android:id="@+id/editTextUpdateAge"
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:ems="10"
         android:hint="Enter Age"
         android:inputType="number"
@@ -33,7 +49,7 @@
         android:id="@+id/editTextUpdateEmail"
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:ems="10"
         android:hint="Enter Email"
         android:inputType="textEmailAddress"
@@ -43,8 +59,15 @@
         android:id="@+id/buttonUpdateUser"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_margin="20dp"
+        android:layout_margin="5dp"
         android:text="Update User"
         android:textSize="18sp" />
+
+    <ProgressBar
+        android:id="@+id/progressBarUpdateUser"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible" />
 
 </LinearLayout>
